objects/Zones__c.object
<CustomObject>
    <description>Object to store Zones (Industrial Parks, Gated Communities, Working-class Communities) from Callejero in SFDC.</description>
    <fields>
        <fullName>AddressNumber__c</fullName>
        <description>Main Street Number of Zone / Altura de Calle Principal de la Zona</description>
        <label>Address Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altura_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Altura Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BARRIOMU__c</fullName>
        <description>BARRIO Name in CV Callejero</description>
        <label>BARRIOMU</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingType__c</fullName>
        <description>Building Structure Type / Tipo de Estructura habitacional</description>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-CASA</fullName>
                </value>
                <value>
                    <fullName>2-LOCAL</fullName>
                </value>
                <value>
                    <fullName>3-EDIFICIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calle_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Calle Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Zone Comment / Comentario de Zona</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Croquis_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Croquis Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depto_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Depto Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entrecalles_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Entrecalles Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FATB_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>FATB Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grupo_Edificio_Requerido__c</fullName>
        <description>Indicates if the Building Group is Mandatory / Indica el nivel de obligatoriedad de informar el Grupo del Edificio</description>
        <label>Grupo Edificio Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if a Zone record is Active or Inactive</description>
        <label>Zone Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location to which the Zone belongs / Localidad a la que pertenece la Zona</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Zones</relationshipLabel>
        <relationshipName>Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lote_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Lote Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manzana_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Manzana Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_Edificio_Requerido__c</fullName>
        <description>Indicates if the Building Number is Mandatory / Indica el nivel de obligatoriedad de informar el Nombre del Edificio</description>
        <label>Nombre Edificio Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NroEdificio_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Nro Edificio Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Piso_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Piso Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_Requerido__c</fullName>
        <description>Define si un campo es Requerido, Opcional, o no debe mostrarse en pantalla</description>
        <label>Sector Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zone Main Street / Calle Principal de la Zona</description>
        <label>Street</label>
        <referenceTo>Street__c</referenceTo>
        <relationshipLabel>Zones</relationshipLabel>
        <relationshipName>Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_Edificio_Requerido__c</fullName>
        <description>Indicates if the Building Number is Mandatory / Indica el nivel de obligatoriedad de informar el Nombre del Edificio</description>
        <label>Tipo Edificio Requerido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Obligatorio</fullName>
                </value>
                <value>
                    <fullName>2 Opcional</fullName>
                </value>
                <value>
                    <fullName>3 No Mostrar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZoneID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Callejero External Zone ID</description>
        <externalId>true</externalId>
        <label>Callejero Zone ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZoneType__c</fullName>
        <description>Zone Type / Tipo de Zona del Barrio</description>
        <label>Zone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 URBANA</fullName>
                </value>
                <value>
                    <fullName>2 BARRIO MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>3 BARRIO PRIVADO</fullName>
                </value>
                <value>
                    <fullName>4 RURAL</fullName>
                </value>
                <value>
                    <fullName>5 ISLAS</fullName>
                </value>
                <value>
                    <fullName>6 PARQUE INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>7 STANDARD</fullName>
                </value>
                <value>
                    <fullName>8 CASILLA DE CORREO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Zone</label>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>